Fixed z-index issue of header

--- a/src/_header.scss
+++ b/src/_header.scss
@@ -2,6 +2,7 @@
 header {
     position: sticky;
     top: 0;
+    z-index: 1;
     color: color('gray', '900');
     background-color: color('yellow', 'base');
     padding: spacer('2');
