--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 1;
   color: #212121;
   background-color: #ffeb3b;
   padding: 0.5rem;
